add insight image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="column">
         <h1 class="title is-4">\(\textbf{Stochastic NODE-DMD} \) is a probabilistic spectral analysis of nonlinear dynamics from sparse observations.</h1>
         <br>
-        <img src="./static/images/howitworks.png" width="1500">
+        <img src="./static/images/howitworks.gif" width="1500">
         </div>
     </div>
     <!-- Dataset -->
