--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="column">
         <h1 class="title is-4">\(\textbf{Stochastic NODE-DMD} \) is a probabilistic spectral analysis of nonlinear dynamics from sparse observations.</h1>
         <br>
-        <img src="./static/images/first_figure.png" width="1500">
+        <img src="./static/images/first_pics.png" width="1500">
         </div>
     </div>
     <!-- Dataset -->
@@ -172,9 +172,9 @@
       </p>
       <br>
         <img src="./static/images/recon_synthetic.mp4" width="1200">
-        <img src="./static/images/recon_gray_scott.mp4" width="1200">
+        <!-- <img src="./static/images/recon_gray_scott.mp4" width="1200">
         <img src="./static/images/recon_vorticity.mp4" width="1200">
-        <img src="./static/images/recon_cylinder.mp4" width="1200">
+        <img src="./static/images/recon_cylinder.mp4" width="1200"> -->
         <br><br>
           <p style="text-align: left;">
             We conduct a function wise ablation study listed as follows: <br><br>
