--- a/index.html
+++ b/index.html
@@ -250,20 +250,20 @@
         <h2 class="title is-3">Paper</h2>
     <div class="paper-thumbnail">
         <a href="https://arxiv.org/pdf/2502.20380">
-            <img class="layered-paper-big" width="100%" src="./static/images/preview_muCode.png" alt="Paper thumbnail"/>
+            <img class="layered-paper-big" width="100%" src="./static/images/paper_preview.png" alt="Paper thumbnail"/>
         </a>
     </div>
     <div class="paper-info">
         <h3 class="title is-4" style="text-align: center;">BibTex</h3>
         <pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>
-@inproceedings{
+<!-- @inproceedings{
     jain2025multiturn,
     title={Multi-Turn Code Generation Through Single-Step Rewards},
     author={Arnav Kumar Jain and Gonzalo Gonzalez-Pumariega and Wayne Chen and Alexander M Rush and Wenting Zhao and Sanjiban Choudhury},
     booktitle={Forty-second International Conference on Machine Learning},
     year={2025},
     url={https://openreview.net/forum?id=aJeLhLcsh0}
-  }
+  } -->
         </code></pre> 
     </div>
     </div>
