add publication information

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://openreview.net/pdf?id=aJeLhLcsh0"
+                <a href="https://arxiv.org/pdf/2511.20612"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -249,21 +249,23 @@
       <div class="column" id="Paper">
         <h2 class="title is-3">Paper</h2>
     <div class="paper-thumbnail">
-        <a href="https://arxiv.org/pdf/2502.20380">
+        <a href="https://arxiv.org/abs/2511.20612">
             <img class="layered-paper-big" width="100%" src="./static/images/paper_preview.png" alt="Paper thumbnail"/>
         </a>
     </div>
     <div class="paper-info">
         <h3 class="title is-4" style="text-align: center;">BibTex</h3>
         <pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>
-<!-- @inproceedings{
-    jain2025multiturn,
-    title={Multi-Turn Code Generation Through Single-Step Rewards},
-    author={Arnav Kumar Jain and Gonzalo Gonzalez-Pumariega and Wayne Chen and Alexander M Rush and Wenting Zhao and Sanjiban Choudhury},
-    booktitle={Forty-second International Conference on Machine Learning},
+
+  @misc{kim2025sparsetofieldreconstructionstochasticneural,
+    title={Sparse-to-Field Reconstruction via Stochastic Neural Dynamic Mode Decomposition}, 
+    author={Yujin Kim and Sarah Dean},
     year={2025},
-    url={https://openreview.net/forum?id=aJeLhLcsh0}
-  } -->
+    eprint={2511.20612},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    url={https://arxiv.org/abs/2511.20612}, 
+  }
         </code></pre> 
     </div>
     </div>
@@ -276,7 +278,7 @@
       <div class="column is-8">
         <div class="content has-text-centered">
           <p>
-            <a href="https://github.com/portal-cornell/MOSAIC/tree/gh-pages">Fork</a> of a <a href="https://github.com/nerfies/nerfies.github.io">fork</a>.
+            <a href="https://github.com/sdean-group/Stochastic-NODE-DMD/tree/gh-pages">Fork</a> of a <a href="https://github.com/nerfies/nerfies.github.io">fork</a>.
           </p>
         </div>
       </div>
